# streamlit-crossfit-app

./: .coverage  .gitignore  eda.py  main.py  pyproject.toml
.streamlit/: config.toml
test/: test_app.py
