[project]
name = "streamlit-crossfit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.15.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
test = "pytest -v --cov=."
